--- a/src/template.html
+++ b/src/template.html
@@ -7,14 +7,18 @@
 </head>
 <body>
     <header>
-        <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
-            <button>Contact Us</button>
+        <nav class="nav-bar">
+            <button class="navbar-btn" id="home-btn">Home</button>
+            <button class="navbar-btn" id="about-btn">About</button>
+            <button class="navbar-btn" id="menu-btn">Menu</button>
+            <button class="navbar-btn" id="contact-btn">Contact Us</button>
         </nav>
     </header>
-    <div id="content"></div>
+    <div id="content">
+        <!-- <h1>Welcome to Restaurant</h1>
+        <img src="./restaurant.jpg" alt="Restaurant Image" height="600px">
+        <p>Come on down and visit us to see why we are so well loved in the community. We love having you here!</p> -->
+    </div>
     
 </body>
 </html>
