--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libertinus+Mono&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -12,6 +15,30 @@
             <button class="navbar-btn" id="about-btn">About</button>
             <button class="navbar-btn" id="menu-btn">Menu</button>
             <button class="navbar-btn" id="contact-btn">Contact Us</button>
+            <style>
+                body{
+                    margin: 0;
+                }
+
+                .nav-bar{
+                    display: flex;
+                    gap: 60px;
+                    justify-content: center;
+                    padding: 30px;
+                    background-color: rgb(255, 148, 76);
+                    margin: 0;
+                    box-sizing: border-box;
+                }
+
+                .navbar-btn{
+                    padding: 10px 20px;
+                    font-size: large;
+                    border-radius: 5px;
+                    background-color: rgb(249, 195, 160);
+                    font-weight: bold;
+                    border: 1px solid black;
+                }
+            </style>
         </nav>
     </header>
     <div id="content">
