added css for all pages

--- a/src/template.html
+++ b/src/template.html
@@ -31,12 +31,13 @@
                 }
 
                 .navbar-btn{
-                    padding: 10px 20px;
+                    padding: 12px 20px;
                     font-size: large;
                     border-radius: 5px;
                     background-color: rgb(249, 195, 160);
                     font-weight: bold;
                     border: 1px solid black;
+                    /* font-family: Libertinus Mono; */
                 }
             </style>
         </nav>
